# prism

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  pytest.ini
.github/workflows/: backup.yml  deploy.yml
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
personas/: _base_guidelines.toml  asmongold.toml  bikini-bottom-buddy.toml  default.toml  donald-trump.toml  hasan-piker.toml  karen.toml  kasumi-doa.toml  sarcastic-pragmatist.toml  tech-expert.toml  the-feminist.toml  the-memer.toml  the-noughties-memer.toml  the-reddit-and-discord-mod.toml  the-wolverine.toml  tifa-lockhart.toml  wolverine.toml
prism/: config.py  logging.py  main.py
prism/cogs/: duel.py  facts.py  length.py  memory.py  personas.py  preferences.py
prism/models/: __init__.py  duel.py
prism/services/: channel_locks.py  db.py  emoji_enforcer.py  emoji_index.py  facts_backfill.py  git_sync.py  memory.py  openrouter_client.py  personas.py  rate_limit.py  reaction_engine.py  settings.py  user_learning.py  user_preferences.py
prism/storage/: migrations.py  schema.sql
tests/: __init__.py  conftest.py  test_channel_locks.py  test_config.py  test_database.py  test_duel.py  test_emoji_enforcer.py  test_emoji_index.py  test_history_formatting.py  test_length_deprecation.py  test_logging.py  test_memory_service.py  test_message_truncation.py  test_openrouter_client.py  test_personas.py  test_preferences_cog.py  test_reaction_engine.py  test_settings.py  test_shutdown.py  test_source_formatting.py  test_user_preferences.py
(+23 files in other folders)
